# pa-applet

./: .gitignore  ChangeLog  INSTALL  INSTALL.md  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac
debian/: README.Debian  README.source  changelog  control  copyright  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  pa-applet.cron.d.ex  pa-applet.default.ex  pa-applet.doc-base.EX  pa-applet.substvars  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
man/: Makefile.am  pa-applet.1
src/: Makefile.am  audio_status.c  audio_status.h  key_grabber.c  key_grabber.h  main.c  notifications.c  notifications.h  popsound.c  popsound.h  popup_menu.c  popup_menu.h  pulse_glue.c  pulse_glue.h  tray_icon.c  tray_icon.h  volume_scale.c  volume_scale.h
